spacing minor issue

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .masthead-title a {
   display: inline-block;
-  padding-left: 10rem;
+  /* padding-left: 10rem; */
   color: #505050;
 }
 
